--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-<div class="container" id="container">
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>تسجيل حساب جديد</title>
+    
+  <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
+
+  <link rel="stylesheet" href="style.css">
+
+  </head>
+
+  <body>
+
+ <div class="container" id="container">
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  block">
       <!--onkeyup="return(validate());" عند كتابة تشغل الدالة validate. -->
@@ -26,3 +40,7 @@
     </div>
   </div>
 </div>
+  
+  <script src="script.js"></script>  
+  </body>
+</html>
